# discord-price-ticker

./: .gitignore  Cargo.toml  README.md  README_Design.md  app_config.sample.json
src/: bot_update.rs  config.rs  main.rs  quote.rs
src/discord/: client.rs
src/quote/: error.rs  req_consumer.rs  request.rs  response.rs
